--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     { "source": "/privacy-policy", "destination": "/privacy-policy.html" },
-    { "source": "/refund-policy", "destination": "/refund-policy.html" },
-    { "source": "/terms-and-conditions", "destination": "/terms-and-conditions.html" }
+    { "source": "/Refund-policy", "destination": "/Refund-policy.html" },
+    { "source": "/Terms-and-conditions", "destination": "/Terms-and-conditions.html" }
   ]
 }
